add thread pool and timer

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -175,14 +175,18 @@
     <ClInclude Include="Inc\Framework\Common\Buffer.h" />
     <ClInclude Include="Inc\Framework\Common\CameraManager.h" />
     <ClInclude Include="Inc\Framework\Common\GfxConfiguration.h" />
+    <ClInclude Include="Inc\Framework\Common\Global.h" />
     <ClInclude Include="Inc\Framework\Common\GraphicsManager.h" />
     <ClInclude Include="Inc\Framework\Common\Image.h" />
     <ClInclude Include="Inc\Framework\Common\InputManager.h" />
+    <ClInclude Include="Inc\Framework\Common\Log.h" />
     <ClInclude Include="Inc\Framework\Common\SceneManager.h" />
     <ClInclude Include="Inc\Framework\Common\MemoryManager.hpp" />
     <ClInclude Include="Inc\Framework\Common\Scene.h" />
     <ClInclude Include="Inc\Framework\Common\SceneNode.h" />
     <ClInclude Include="Inc\Framework\Common\SceneObject.h" />
+    <ClInclude Include="Inc\Framework\Common\ThreadPool.h" />
+    <ClInclude Include="Inc\Framework\Common\TimerManager.h" />
     <ClInclude Include="Inc\Framework\Interface\IApplication.h" />
     <ClInclude Include="Inc\Framework\Interface\ImageParser.h" />
     <ClInclude Include="Inc\Framework\Interface\IRuntimeModule.h" />
@@ -210,10 +214,12 @@
     <ClCompile Include="Src\Framework\Common\CameraManager.cpp" />
     <ClCompile Include="Src\Framework\Common\GraphicsManager.cpp" />
     <ClCompile Include="Src\Framework\Common\InputManager.cpp" />
+    <ClCompile Include="Src\Framework\Common\Log.cpp" />
     <ClCompile Include="Src\Framework\Common\SceneManager.cpp" />
     <ClCompile Include="Src\Framework\Common\MemoryManager.cpp" />
     <ClCompile Include="Src\Framework\Common\Scene.cpp" />
     <ClCompile Include="Src\Framework\Common\SceneObject.cpp" />
+    <ClCompile Include="Src\Framework\Common\TimerManager.cpp" />
     <ClCompile Include="Src\Framework\Math\Guid.cpp" />
     <ClCompile Include="Src\Framework\Parser\FbxParser.cpp" />
     <ClCompile Include="Src\RHI\D3D12GraphicsManager.cpp" />
