--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -1,5 +1,5 @@
 [log]
-TraceLevel = Warning
+TraceLevel = Normal
 Markers = ALL
 LogPath = H:/Project_VS2019/NutEngine/Engine/log.txt
 
@@ -10,4 +10,4 @@ MaxTasks = 12
 TimeOut = 10
 
 [Scene]
-DefaultFilePath = H:/Project_VS2019/NutEngine/Engine/Asset/box.fbx
+DefaultFilePath = H:/Project_VS2019/NutEngine/Engine/Asset/sadface.fbx
