texture load complete and add basic physics module

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Engine/External/FBXSDK/2020.3.1
+/Engine/External/bullet3
