--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -137,8 +137,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>d3d12.lib;dxgi.lib;d3dcompiler.lib;libfbxsdk.lib;dxguid.lib;DirectXTK12.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>H:\Project_VS2019\NutEngine\Engine\External\FBXSDK\2020.3.1\lib\vs2019\x64\debug;X:\lib\DirectXTK12-main\Bin\Desktop_2022_Win10\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>d3d12.lib;dxgi.lib;d3dcompiler.lib;libfbxsdk.lib;dxguid.lib;BulletDynamics_vs2010_x64_debug.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>H:\Project_VS2019\NutEngine\Engine\External\FBXSDK\2020.3.1\lib\vs2019\x64\debug;H:\Project_VS2019\NutEngine\Engine\External\bullet3\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Lib>
     <FxCompile>
       <ShaderModel>5.0</ShaderModel>
@@ -187,15 +187,24 @@
     <ClInclude Include="Inc\Framework\Common\SceneObject.h" />
     <ClInclude Include="Inc\Framework\Common\ThreadPool.h" />
     <ClInclude Include="Inc\Framework\Common\TimerManager.h" />
+    <ClInclude Include="Inc\Framework\Geometries\Box.h" />
+    <ClInclude Include="Inc\Framework\Geometries\Geometry.h" />
+    <ClInclude Include="Inc\Framework\Geometries\Plane.h" />
+    <ClInclude Include="Inc\Framework\Geometries\Sphere.h" />
     <ClInclude Include="Inc\Framework\Interface\IApplication.h" />
     <ClInclude Include="Inc\Framework\Interface\ImageParser.h" />
+    <ClInclude Include="Inc\Framework\Interface\IPhysicsManager.h" />
     <ClInclude Include="Inc\Framework\Interface\IRuntimeModule.h" />
     <ClInclude Include="Inc\Framework\Interface\ISceneParser.h" />
+    <ClInclude Include="Inc\Framework\Math\Aabb.h" />
     <ClInclude Include="Inc\Framework\Math\Guid.h" />
     <ClInclude Include="Inc\Framework\Math\NutMath.hpp" />
     <ClInclude Include="Inc\Framework\Parser\BMP.h" />
     <ClInclude Include="Inc\Framework\Parser\FbxParser.h" />
     <ClInclude Include="Inc\Framework\Parser\JPEG.h" />
+    <ClInclude Include="Inc\Physics\MotionState.h" />
+    <ClInclude Include="Inc\Physics\NutPhysicsManager.h" />
+    <ClInclude Include="Inc\Physics\RigidBody.h" />
     <ClInclude Include="Inc\RHI\D3D12GrahpicsManager.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
@@ -219,8 +228,13 @@
     <ClCompile Include="Src\Framework\Common\Scene.cpp" />
     <ClCompile Include="Src\Framework\Common\SceneObject.cpp" />
     <ClCompile Include="Src\Framework\Common\TimerManager.cpp" />
+    <ClCompile Include="Src\Framework\Geometries\Box.cpp" />
+    <ClCompile Include="Src\Framework\Geometries\Geometry.cpp" />
+    <ClCompile Include="Src\Framework\Geometries\Plane.cpp" />
+    <ClCompile Include="Src\Framework\Geometries\Sphere.cpp" />
     <ClCompile Include="Src\Framework\Math\Guid.cpp" />
     <ClCompile Include="Src\Framework\Parser\FbxParser.cpp" />
+    <ClCompile Include="Src\Physics\NutPhysicsManager.cpp" />
     <ClCompile Include="Src\RHI\D3D12GraphicsManager.cpp" />
   </ItemGroup>
   <ItemGroup>
