--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="Inc\Framework\Common\Buffer.h" />
     <ClInclude Include="Inc\Framework\Common\CameraManager.h" />
     <ClInclude Include="Inc\Framework\Common\ColorSpaceConversion.h" />
+    <ClInclude Include="Inc\Framework\Common\GameLogic.h" />
     <ClInclude Include="Inc\Framework\Common\GfxConfiguration.h" />
     <ClInclude Include="Inc\Framework\Common\Global.h" />
     <ClInclude Include="Inc\Framework\Common\GraphicsManager.h" />
@@ -220,6 +221,7 @@
     <ClCompile Include="Src\Framework\Common\AssetLoader.cpp" />
     <ClCompile Include="Src\Framework\Common\BaseApplication.cpp" />
     <ClCompile Include="Src\Framework\Common\CameraManager.cpp" />
+    <ClCompile Include="Src\Framework\Common\GameLogic.cpp" />
     <ClCompile Include="Src\Framework\Common\GraphicsManager.cpp" />
     <ClCompile Include="Src\Framework\Common\InputManager.cpp" />
     <ClCompile Include="Src\Framework\Common\Log.cpp" />
@@ -264,6 +266,7 @@
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Asset\Shader\cbuffer.hlsli" />
     <None Include="Asset\Shader\type.hlsli" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
