--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -176,6 +176,7 @@
     <ClInclude Include="Inc\Framework\Common\ColorSpaceConversion.h" />
     <ClInclude Include="Inc\Framework\Common\GameLogic.h" />
     <ClInclude Include="Inc\Framework\Common\GfxConfiguration.h" />
+    <ClInclude Include="Inc\Framework\Common\GfxStructures.h" />
     <ClInclude Include="Inc\Framework\Common\Global.h" />
     <ClInclude Include="Inc\Framework\Common\GraphicsManager.h" />
     <ClInclude Include="Inc\Framework\Common\Image.h" />
@@ -186,17 +187,21 @@
     <ClInclude Include="Inc\Framework\Common\Scene.h" />
     <ClInclude Include="Inc\Framework\Common\SceneNode.h" />
     <ClInclude Include="Inc\Framework\Common\SceneObject.h" />
+    <ClInclude Include="Inc\Framework\Common\ShaderManager.h" />
     <ClInclude Include="Inc\Framework\Common\ThreadPool.h" />
     <ClInclude Include="Inc\Framework\Common\TimerManager.h" />
+    <ClInclude Include="Inc\Framework\DrawPass\ForwardRenderPass.h" />
     <ClInclude Include="Inc\Framework\Geometries\Box.h" />
     <ClInclude Include="Inc\Framework\Geometries\Geometry.h" />
     <ClInclude Include="Inc\Framework\Geometries\Plane.h" />
     <ClInclude Include="Inc\Framework\Geometries\Sphere.h" />
     <ClInclude Include="Inc\Framework\Interface\IApplication.h" />
+    <ClInclude Include="Inc\Framework\Interface\IDrawPass.h" />
     <ClInclude Include="Inc\Framework\Interface\ImageParser.h" />
     <ClInclude Include="Inc\Framework\Interface\IPhysicsManager.h" />
     <ClInclude Include="Inc\Framework\Interface\IRuntimeModule.h" />
     <ClInclude Include="Inc\Framework\Interface\ISceneParser.h" />
+    <ClInclude Include="Inc\Framework\Interface\IShaderManager.h" />
     <ClInclude Include="Inc\Framework\Math\Aabb.h" />
     <ClInclude Include="Inc\Framework\Math\Guid.h" />
     <ClInclude Include="Inc\Framework\Math\NutMath.hpp" />
@@ -230,6 +235,7 @@
     <ClCompile Include="Src\Framework\Common\Scene.cpp" />
     <ClCompile Include="Src\Framework\Common\SceneObject.cpp" />
     <ClCompile Include="Src\Framework\Common\TimerManager.cpp" />
+    <ClCompile Include="Src\Framework\DrawPass\ForwardRenderPass.cpp" />
     <ClCompile Include="Src\Framework\Geometries\Box.cpp" />
     <ClCompile Include="Src\Framework\Geometries\Geometry.cpp" />
     <ClCompile Include="Src\Framework\Geometries\Plane.cpp" />
