--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -222,6 +222,12 @@
     <ClInclude Include="Inc\Framework\DrawPass\ForwardRenderPass.h">
       <Filter>Inc\Framework\DrawPass</Filter>
     </ClInclude>
+    <ClInclude Include="Inc\Framework\DrawPass\ShadowMapPass.h">
+      <Filter>Inc\Framework\DrawPass</Filter>
+    </ClInclude>
+    <ClInclude Include="Inc\Framework\DrawPass\HUDPass.h">
+      <Filter>Inc\Framework\DrawPass</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -296,6 +302,12 @@
     <ClCompile Include="Src\Framework\DrawPass\ForwardRenderPass.cpp">
       <Filter>Src\Framework\DrawPass</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Framework\DrawPass\ShadowMapPass.cpp">
+      <Filter>Src\Framework\DrawPass</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Framework\DrawPass\HUDPass.cpp">
+      <Filter>Src\Framework\DrawPass</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Asset\Shader\vs.hlsl">
@@ -308,6 +320,18 @@
       <Filter>Shader</Filter>
     </FxCompile>
     <FxCompile Include="Asset\Shader\ps_debug.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="Asset\Shader\ps_sm.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="Asset\Shader\vs_sm.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="Asset\Shader\vs_hud.hlsl">
+      <Filter>Shader</Filter>
+    </FxCompile>
+    <FxCompile Include="Asset\Shader\ps_hud.hlsl">
       <Filter>Shader</Filter>
     </FxCompile>
   </ItemGroup>
