--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -10,4 +10,5 @@ MaxTasks = 12
 TimeOut = 10
 
 [Scene]
-DefaultFilePath = H:/Project_VS2019/NutEngine/Engine/Asset/default.fbx
+DefaultFilePath = H:/Project_VS2019/NutEngine/Engine/Asset/InteriorTest.fbx
+DefaultAmbientLight = 0.2,0.2,0.2
