--- a/Engine/config.ini
+++ b/Engine/config.ini
@@ -10,5 +10,7 @@ MaxTasks = 12
 TimeOut = 10
 
 [Scene]
-DefaultFilePath = H:/Project_VS2019/NutEngine/Engine/Asset/InteriorTest.fbx
-DefaultAmbientLight = 0.2,0.2,0.2
+DefaultFilePath = H:/Project_VS2019/NutEngine/Engine/Asset/girl.fbx
+DefaultAmbientLight = 0.2,0.2,0.2,0.2
+UseEnvLight = true
+UseShadow = true
